# symplectix

./: .bazelignore  .bazelrc  .bazelrc.ci  .bazelrc.remote  .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  cargo-bazel-lock.json  clippy.toml  crates.bzl  flake.nix  go.mod  go.sum  rustfmt.toml  toolchain.bzl  workspace.bzl
.bazelrc.d/: benice.bazelrc  cache.bazelrc  lint.bazelrc  macos.bazelrc  profile.bazelrc  verbose.bazelrc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  post-attach.sh  post-create.sh
.devcontainer/workspace/: Dockerfile  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  bazelrc  pr-title-checker-config.json
.github/workflows/: bazel.yaml  check-pr.yaml  ci.bazelrc  ci.yaml  fuzzing.yaml  postsubmit.yaml  presubmit.yaml  reviewdog.yaml  testing.yaml
audit/: BUILD.bazel  audit.sh
bits/: BUILD  BUILD.bazel  Cargo.toml  api.rs  bit_all.rs  bit_any.rs  bit_count.rs  bit_excess.rs  bit_get.rs  bit_len.rs  bit_put.rs  bit_rank.rs  bit_select.rs  bits.go  bits.rs  bits_mut.rs  bits_test.go  bits_test.rs  block.rs  bools.rs  broadword.rs  clamps.rs  container.rs  container_mut.rs  count.rs  excess.rs  impls.rs  int_test.rs  lib.rs  lsb.rs  mask.rs  not.rs  ops.rs  pdep_test.rs  rank.rs  select.rs  slice.rs  word.rs  word_test.rs  xor.rs
bits/bit/: BUILD  BUILD.bazel  lib.rs
bits/bitaddr/: BUILD.bazel  bitaddr.rs
bits/bitaux/: BUILD  BUILD.bazel  bitaux.rs  imp.rs  impl_accumulated.rs  impl_fenwicktree.rs  l1l2.rs  lib.rs  rank_aux.rs
bits/bitaux/src/: lib.rs
bits/bitpack/: BUILD  bitpack.rs  bitpack_test.rs
bits/bitpacking/: BUILD.bazel  bitpacking.rs  bitpacking_test.rs
bits/bitpacking/src/: lib.rs
bits/bits_aux/: BUILD  BUILD.bazel  aux.rs  l1l2.rs
bits/bits_buf/: BUILD  lib.rs
bits/bits_core/: BUILD  bit_vec.rs  bits.rs  bits_mut.rs  block.rs  lib.rs  mask.rs  word.rs
bits/bits_core/block/: block_mut.rs  count.rs  excess.rs  pack.rs  rank.rs  select.rs
bits/bits_core/mask/: and.rs  helper.rs  not.rs  or.rs  xor.rs
bits/bits_mask/: BUILD  and.rs  helper.rs  lib.rs  not.rs  or.rs  xor.rs
bits/bits_pack/: BUILD  pack.rs
bits/bits_trait/: BUILD  bits.rs  bits_test.rs  lib.rs  word.rs
bits/bits_trait/mask/: and.rs
bits/bitvec/: BUILD.bazel  Cargo.toml  l1l2.rs  lib.rs  rank_aux.rs  rho_test.rs
bits/bitvec/src/: lib.rs  rank_aux.rs
bits/bitwise/: BUILD.bazel  and.rs  and_not.rs  bitwise.rs  lib.rs  not.rs  or.rs  xor.rs
bits/fenwicktree/: BUILD.bazel  fenwicktree.rs  fenwicktree_test.rs
bits/mask/: BUILD.bazel  mask.rs  or.rs
bits/roaring/: BUILD  bit_map.rs  lib.rs  vec_set.rs
bits/roaring_block/: BUILD  BUILD.bazel  bit_map.rs  lib.rs  map.rs  vec_set.rs
bits/smallset/: BUILD  lib.rs
bits/src/: all.rs  and.rs  any.rs  bit_all.rs  bit_any.rs  bit_count.rs  bit_get.rs  bit_len.rs  bit_put.rs  bit_rank.rs  bit_select.rs  bits.rs  bits_mut.rs  bits_test.rs  block.rs  bools.rs  container.rs  container_mut.rs  count.rs  excess.rs  get.rs  impls.rs  index.rs  int.rs  int_test.rs  lib.rs  lsb.rs  mask.rs  mask_test.rs  msb.rs  not.rs  ops.rs  or.rs  pack_test.rs  put.rs  rank.rs  select.rs  slice.rs  varint.rs  word.rs  (+2 more)
bits/src/mask/: and.rs  not.rs  or.rs  xor.rs
bits/src/ops/: bit_all.rs  bit_any.rs  bit_count.rs  bit_excess.rs  bit_get.rs  bit_len.rs  bit_put.rs  bit_rank.rs  bit_select.rs
bits/tests/: bitpacking.rs  bits.rs  bits_test.rs  int.rs  mask.rs  varint.rs  word.rs  word_test.rs
bits/word/: BUILD.bazel
bits/word/src/: lib.rs
bits/word/tests/: int.rs  pdep.rs
code/semantic/: BUILD.bazel  main.rs
compress/zlib/: BUILD.zlib.bazel
crates/: defs.bzl
crypto/openssl/: BUILD.openssl.bazel
fenwick_tree/: BUILD.bazel  fenwick_tree.rs  tests.rs
fenwick_tree/tests/: fenwick_tree.rs
fenwicktree/: BUILD.bazel  Cargo.toml  fenwicktree.rs  fenwicktree_test.rs
fenwicktree/tests/: fenwicktree.rs
fuzzing/: BUILD  BUILD.bazel  defs.bzl  fuzzing.rs  rust.bzl
fuzzing/cmd/: corpus.rs  fuzz_corpus.rs  fuzz_test.rs  mod.rs  test.rs
fuzzing/examples/: BUILD.bazel  should_not_fail.rs
fuzzing/examples/corpus/corpus_1/: corpus_a
fuzzing/examples/corpus/corpus_2/: corpus_b
fuzzing/internal/: fuzzing.bzl
fuzzing/private/: fuzzing.bzl
index/fenwicktree/: BUILD.bazel  fenwicktree.rs  fenwicktree_test.rs
index/fenwicktree/src/: lib.rs
index/fenwicktree/tests/: children.rs  lower_bound.rs  prefix.rs  props.rs  update.rs
num/: BUILD.bazel  Cargo.toml  arith.rs  bitop.rs  bits.rs  bitwise.rs  cast.rs  float.rs  indexutil.rs  int.rs  intop.rs  lib.rs
num/int/: BUILD.bazel  arith.rs  bitpos.rs  int.rs
num/src/: int.rs
num/tests/: int.rs  pdep.rs
num/word/: BUILD.bazel  word.rs
path/faccess/: BUILD.bazel  faccess.rs  faccess_unix.rs
path/faccess/src/: lib.rs
process/: BUILD.bazel
process/entrypoint/: BUILD  BUILD.bazel  entrypoint.rs  fsutil.rs  lib.rs  orphan.c  zombie.c
process/entrypoint/cmd/: coordinator.rs
process/entrypoint/fsutil/: BUILD.bazel
process/entrypoint/src/: command.rs  coordinator.rs  lib.rs  main.rs  process_wrapper.rs  zombie.c
process/entrypoint/testdata/: coordinator_test.yaml
process/entrypoint/tests/: mod.rs
process/fsutil/: BUILD.bazel  fsutil.rs
process/process_wrapper/: BUILD.bazel  process_wrapper.rs
process/process_wrapper/tests/: mod.rs
process/reaper/: BUILD  reaper.rs
process/run/: BUILD  child.rs  run.rs  run_test.go  run_test.rs
process/run/cmd/: BUILD
process/run/cmd/orphan/: orphan.c
process/run/cmd/run/: run.rs
process/run/testdata/: container_structure_test.yaml
process/runproc/: BUILD.bazel  imp.rs  runproc.rs
process/runproc/cmd/: runproc.rs
process/runproc/testdata/: runproc.yaml
process/src/: lib.rs
protobuf/protoc_plugin/: BUILD  BUILD.bazel  defs.bzl  protoc_plugin.rs  (+1 more)
semantic/: BUILD  BUILD.bazel
stamp/: BUILD  BUILD.bazel  buildinfo.sh  workspace_status.sh
testing/: BUILD.bazel  lib.rs  testing.rs
tools/: firecracker  gen-rust-project  rustfmt  workspace_status.sh
(+53 files in other folders)
