package(default_visibility = ["//visibility:public"])

exports_files([
    ".clippy.toml",
    ".rustfmt.toml",
])

# platform(
#     name = "linux_x86_64_nightly",
#     constraint_values = [
#         "@platforms//os:linux",
#         "@platforms//cpu:x86_64",
#         "@rules_rust//rust/platform/channel:nightly",
#     ],
# )

# platform(
#     name = "macos_arm64_nightly",
#     constraint_values = [
#         "@platforms//os:macos",
#         "@platforms//cpu:arm64",
#         "@rules_rust//rust/platform/channel:nightly",
#     ],
# )
