load("@aspect_bazel_lib//lib:jq.bzl", "jq")

exports_files([
    ".clippy.toml",
    ".rustfmt.toml",
])

jq(
    name = "labels",
    srcs = [],
    filter = "|".join([
        "$ARGS.named.STAMP as $stamp",
        """
        .labels = {
            gitCommit: ($stamp.STABLE_GIT_COMMIT // \"none\"),
            githubRunId: ($stamp.STABLE_GITHUB_RUN_ID // \"none\"),
            githubRunNumber: ($stamp.STABLE_GITHUB_RUN_NUMBER // \"none\"),
        }
        """,
    ]),
)
